# star

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  WORKSPACE
star/: BUILD  add_request.h  delete_request.h  document.h  index.cc  index.h  index_factory.cc  index_factory.h  search_request.h  search_response.h  status.h
star/distance/: euclidean_distance.cc  euclidean_distance.h
star/impl/ann/: kd_node.cc  kd_node.h  kd_tree_index.cc  kd_tree_index.h
star/impl/brute_force/: brute_force_index.cc  brute_force_index.h
star/impl/flat/: flat_index.cc  flat_index.h
star/impl/knn/: knn_index.cc  knn_index.h
tests/: BUILD
tests/knn/: knn_index_test.cc
